--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1126,7 +1126,7 @@ button {
 		-webkit-transition-delay: 0.75s;
 		-ms-transition-delay: 0.75s;
 		transition-delay: 0.75s;
-		background-image: url("images/82476816_455915395287303_1119691823674032128_n (1).jpg");
+		background-image: url("../../images/82476816_455915395287303_1119691823674032128_n (1).jpg");
 		background-size: auto, 256px 256px;
 		background-position: center, center;
 		background-repeat: no-repeat, repeat;
@@ -1145,7 +1145,7 @@ button {
 		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
 		/* We can change the background image here. */
-		background-image: url("../../images/bg.jpg");
+		background-image: url("../../images/82476816_455915395287303_1119691823674032128_n (1).jpg"");
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
